# bikeshed

./: .editorconfig  .env.dist  .gitignore  LICENSE  README.md  __wip_parse_config.py  alembic.ini  compose.yaml  exaple.md  justfile  main.py  package-lock.json  package.json  pyproject.toml  test.html  vite.config.js
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2a12b27cd540_initial_schema.py  33d6ec3bc7eb_add_unique_constraint_on_files.py  cbffbe80b72c_base_models.py  ceb341e35f52_initial_database.py  d74d2e62ee8f_add_roots.py  d9acbec54ca8_add_workflow_cols.py
config/: _wip_session_templates.yaml  bs.yaml  dialog_templates.yaml  models.yaml  quickie_templates.yaml  session_templates.yaml
config/database/: V1.0.5__add_entity_tags_and_stashes.sql  bs.sql
docs/: dialog_config.md  example_symfony_workflow.yaml  idea.md  mcp_info.md  nice_links.md  project.md  prompt_template.yml  q.md  session_template.yaml  suggestions.md
docs/patterns/: dropdown.md  htmx-integration.md
frontend/css/: _root_tree.scss  _variables.scss  app.scss
js/: app.js  code_highlight.js  drawer.js  editor.js  notifications.js  prosemirror.js  shutdown-handler.js
js/components/: chat.js  dropzone.js  navbar.js  panel_filter.js  prosemirror.js  shutdown-handler.js  tags.js  theme.js  theme_toggle.js
js/prosemirror/: keymap.ts
js/utils/: helpers.js
src/: _wip_schemas.py  cli.py  config.py  custom_types.py  database.py  dependencies.py  fixtures.py  form_models.py  jinja_extensions.py  main.py  main.py (routes to add)  models.py  schemas.py  types.py
src/components/: __init__.py  base_repository.py  repositories.py  routes.py
src/core/: __init__.py  cache.py  config_loader.py  config_types.py  events.py  llm.py  llm_response.py  mcp_client.py  models.py  registry.py  registry_loader.py  schema_loader.py
src/http/: middleware.py
src/models/: __init__.py  embedded_type.py  form_models.py  models.py
src/repositories/: message_repository.py
src/repository/: __init__.py  base.py  blob.py  entity_stash.py  entity_tag.py  factory.py  flow.py  message.py  root.py  root_file.py  session.py  stash.py  tag.py
src/routes/: __init__.py  blobs.py  flow.py  navbar.py  registry.py  root_management.py  roots.py  session.py  stash.py  stash_ui.py  tag.py
src/service/: _wip_workflow.py  blob_service.py  broadcast.py  broadcast_strategy.py  cache.py  database.py  logging.py  mcp_client.py  mcp_client.py (method to add)  model_updates.py  pulse_mcp_api.py  redis_service.py  session.py  shutdown_helper.py  stash_service.py  (+5 more)
style/: _variables.scss  app.scss  bulma-tagger.scss
templates/: base.html.j2  dynamic_form.html.j2  form-templates.html.j2  form_macros.html.j2  index.html.j2  kitchen_sink.html.j2
tests/: conftest.py  test_api.py  test_cli.py  test_mcp_client.py  test_models.py  test_session_model.py  test_workflow.py  test_workflow_integration.py
(+196 files in other folders)
