[project]
name = "flibberflow"
version = "0.1.0"
description = "MCP Playground"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "click>=8.1.8",
    "fastapi>=0.115.11",
    "fasthx[jinja]>=2.2.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "markdown2>=2.5.3",
    "mcp>=1.3.0",
    "psycopg2>=2.9.10",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "rich>=13.9.4",
    "sse-starlette>=2.2.1",
    "transitions>=0.9.2",
    "uvicorn>=0.34.0",
]
